Add site heading and motto

--- a/index.html
+++ b/index.html
@@ -49,5 +49,8 @@
   </form>
 </div>
 <a href="/dars.html">boshqa</a>
+
+<h1>mixnews</h1>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque, aut ipsam voluptas repellendus modi cum iure recusandae itaque sapiente voluptatibus ullam pariatur totam iusto quisquam eum autem, libero in? Vero.</p>
 </body>
 </html>
